Added links to GitHub and YouTube demo

--- a/app/index.html
+++ b/app/index.html
@@ -63,9 +63,13 @@
                     Google provides Chio with the best search results!
                 </h4>
             </div>
-            <div class="chio-otherFeature">
-                Other services such as EventBrite and Reminders also available.
-            </div>
+        </section>
+        <section class="chio-links">
+            <span> Check us out on
+                <a class="chio-link" href="https://github.com/htn-chio/chio">GitHub</a>
+                and
+                <a class="chio-link" href="https://www.youtube.com/watch?v=ABUiXyzK5ew&feature=youtu.be">YouTube</a>!
+            </span>
         </section>
         <section class="u-text-center chio-footer">
             <span>&copy; 2015. Created by: </span>
