--- a/index.html
+++ b/index.html
@@ -1,32 +1,10 @@
-<html>
-    <head>
-        <title>Chio | In development</title>
-        <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
-        <style>
-            body {
-                font-family: 'Open Sans', sans-serif;
-                background-color: #2980b9;
-                color: white;
-            }
-            .chio-textContainer {
-                position: absolute;
-                transform: translateX(-50%) translateY(-50%);
-                top: 40%;
-                left: 50%;
-                text-align: center;
-            }
-            h1 {
-                line-height: 1;
-                margin: 0 0 5px;
-            }
-        </style>
-    </head>
-    <body>
-        <main>
-            <div class="chio-textContainer">
-                <h1>CHIO</h1>
-                <div>is coming</div>
-            </div>
-        </main>
-    </body>
-</html>
+<!doctype html> <html class=no-js> <head> <meta charset=utf-8> <meta name=description> <meta name=viewport content="width=device-width, initial-scale=1"> <title>Chio | Facebook Messenger Bot</title> <link rel=apple-touch-icon href=apple-touch-icon.png>  <link rel=stylesheet href=styles/main.css> <script src=scripts/vendor/modernizr.js></script> </head> <body> <!--[if lt IE 10]>
+ <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+ <![endif]--> <main> <section class="chio-section u-position-relative"> <div class=chio-branding> <img class=chio-logo src=/images/chio.png> <div class=chio-text><b>Chio</b></div> <div class=chio-subtext>A Facebook Messenger Bot</div> </div> </section> <section class=u-text-center> <h1>Your Intelligent Facebook Bestie</h1> <section> <section class=chio-features> <div class=chio-facebook> <img src=/images/facebook.png> <div class=chio-otherFeature> Built with Facebook APIs. </div> </div> <div class=chio-feature> <img class=chio-apiImageLogo src=/images/yelp.png> <h4> Yelp provides Chio with location suggestions! </h4></div> <div class=chio-feature> <img class=chio-apiImageLogo src=/images/uber.png> <h4> Uber provides Chio with the easiest way to get around! </h4> </div><div class=chio-feature> <img class=chio-apiImageLogo src=/images/google.png> <h4> Google provides Chio with the best search results! </h4> </div> </section> <section class=chio-links> <span> Check us out on <a class=chio-link href=https://github.com/htn-chio/chio>GitHub</a> and <a class=chio-link href="https://www.youtube.com/watch?v=ABUiXyzK5ew&feature=youtu.be">YouTube</a>! </span> </section> <section class="u-text-center chio-footer"> <span>&copy; 2015. Created by: </span> <a href=https://github.com/katrinacrisostomo target=_blank>@katrinacrisostomo</a> <a href=https://github.com/bryanscho target=_blank>@bryanscho</a> <a href=https://github.com/chrisjluc target=_blank>@chrisjluc</a> <a href=https://github.com/aaronte target=_blank>@aaronte</a> </section> </section></section></main>  <script>
+      (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
+      function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
+      e=o.createElement(i);r=o.getElementsByTagName(i)[0];
+      e.src='https://www.google-analytics.com/analytics.js';
+      r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
+      ga('create','UA-67796354-1');ga('send','pageview');
+    </script> <script src=scripts/main.js></script> </body> </html> 
